--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Belle Fleurs</h1>
     <ul>
-        <li><a href="page1.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="page2.html">Shop</a></li>
         <li><a href="#about">About</a></li>
         </li>
