--- a/page3.html
+++ b/page3.html
@@ -54,7 +54,7 @@ input[type=submit]:hover{
 <body>
     <h1>Belle Fleurs</h1>
     <ul>
-        <li><a href="page1.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="page2.html">Shop</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="page3.html">Contact</a></li>
